--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <base href="." target="_blank" />
+    <base href="https://tomgb.github.io/Stage/" />
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Contentful React Starter" />
+    <meta name="description" content="Stage Espresso and Brewbar" />
 
-    <title>React + Contentful</title>
+    <title>Stage Espresso</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
