--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Stage Espresso and Brewbar" />
+    <meta name="description" content="Stage Espresso and Brewbar Coffee Shop" />
 
     <title>Stage Espresso</title>
   </head>
