--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="./index.1a1fda66.css" />
-    <base href="./" />
+    <link rel="stylesheet" href="./index.6daf8ee4.css" />
+    <base href="." />
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.d7a5d47f.ico" />
     <link
@@ -30,6 +30,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="module" src="./index.89deadd7.js"></script>
+    <script type="module" src="./index.57f28895.js"></script>
   </body>
 </html>
